<?xml version="1.0" encoding="utf-8"?>
<vgame.ir.view.component.round.RoundLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:gravity="center"
    android:orientation="vertical"
    app:rv_backgroundColor="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/equalizer_view"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="5dp"
                android:alpha="0.7"
                app:lottie_autoPlay="false"
                app:lottie_rawRes="@raw/equaliser"
                app:lottie_repeatCount="1000" />

            <vgame.ir.view.component.AwsomeTextCell
                android:id="@+id/download_icon"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="5dp"
                android:alpha="0.7"
                android:textSize="22sp"
                android:textColor="@color/md_white_1000"
                android:text="@string/ic_download"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <vgame.ir.view.component.AwsomeTextCell
                android:id="@id/exo_rew"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:text="@string/ic_undo"
                android:textColor="@color/md_white_1000"
                android:textSize="20sp" />

            <vgame.ir.view.component.AwsomeTextCell
                android:id="@id/exo_play"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/ic_play"
                android:textColor="@color/colorAccent"
                android:textSize="30sp" />

            <vgame.ir.view.component.AwsomeTextCell
                android:id="@id/exo_pause"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/ic_pause"
                android:textColor="@color/colorAccent"
                android:textSize="30sp" />

            <vgame.ir.view.component.AwsomeTextCell
                android:id="@id/exo_ffwd"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:text="@string/ic_redo_alt"
                android:textColor="@color/md_white_1000"
                android:textSize="20sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <vgame.ir.view.component.ChangeSpeedCell
                android:id="@+id/btn_changespeed"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_marginEnd="5dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@id/exo_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.google.android.exoplayer2.ui.DefaultTimeBar
            android:id="@id/exo_progress"
            android:layout_width="0dp"
            android:layout_height="22dp"
            android:layout_weight="1" />

        <TextView
            android:id="@id/exo_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</vgame.ir.view.component.round.RoundLinearLayout>

